--- a/style.css
+++ b/style.css
@@ -1,28 +1,34 @@
-#index header {
+/* Index */
+#index {
+  background-color: rgb(89, 96, 105);
+}
+/* General layouts */
+header {
   background-color: rgb(57, 62, 68);
   color: #FFFFFF;
-}
-
-#index a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-#index a:hover {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
+  background-size: cover;
 }
 header h1 {
-  margin: 1% 0px;
+  padding: 1%;
+}
+
+/* Navigation bar */
+.navbar {
+  background-color: rgb(57, 62, 68);
 }
 .nav-item {
-  border: 1px;
-  border-style: solid;
-  border-color: rgb(48, 52, 56);
-  width: 33,3%;
-  height: inherit;
-}
-#main-navigation {
+  border: 1px solid rgb(48, 52, 56);
   width: 100%;
+  background-size: cover;
+  text-align: center;
+  color: #FFFFFF;
+}
+.nav-link {
+  text-decoration: none;
+  cursor: pointer;
+  padding-left: 33%;
+}
+.nav-link:hover {
+  text-decoration: none;
+  cursor: pointer;
 }
