change of subject

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   background-color: rgb(89, 96, 105);
 }
 #opening {
-  
+
 }
 #opening img {
   float: left;
@@ -32,7 +32,7 @@
 }
 
 /* News */
-#news {
+#staff {
   background-color: rgb(89, 96, 105);
 }
 
