--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@
 }
 
 /* Info */
-#info {
+#staff {
   background-color: rgb(89, 96, 105);
 }
 
 /* News */
-#staff {
+#news {
   background-color: rgb(89, 96, 105);
 }
 
