--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ header {
 header h1 {
   padding: 1%;
 }
+header img {
+  float: right;
+  position: sticky;
+
+}
 ul {
   list-style-type: none;
   margin: 0;
@@ -81,13 +86,13 @@ ul li {
 }
 
 /* Style the Image Used to Trigger the Modal */
-#myImg {
+#veteran {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#myImg:hover {opacity: 0.7;}
+#veteran:hover {opacity: 0.7;}
 
 /* The Modal (background) */
 .modal {
@@ -113,7 +118,7 @@ ul li {
 }
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
+#veteran_caption {
   margin: auto;
   display: block;
   width: 80%;
